[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "nether"
requires-python = ">=3.12,<3.13"
dynamic = ["version"]
description = "Handmade 3rd-party implementations."
authors = [
    {name = "Nether", email = "spnether1411@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.11",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.13.1",
]

[project.optional-dependencies]
google = [
    "google-api-python-client>=2.158.0",
    "google-auth-oauthlib>=1.2.1",
]

[dependency-groups]
dev = [
    "google-api-python-client-stubs>=1.28.0",
    "mypy>=1.14.1",
    "pdm>=2.22.2",
    "pre-commit>=4.0.1",
    "ruff>=0.9.1",
]

[tool.setuptools.package-data]
nether = ["py.typed"]

[tool.hatch.version]
source = "versioningit"
default-version = "0.0.0+unknown"

[tool.hatch.version.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
dirty = "{version}+dirty"
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.dirty"

[tool.hatch.build]
artifacts = ["nether/_version.py"]

[tool.hatch.build.targets.wheel]
packages = ["nether"]

[tool.hatch.build.targets.sdist]
only-include = ["nether"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",  # any-type
    "C901",  # complex-structure
    "D100",  # undocumented-public-module
    "D101",  # undocumented-public-class
    "D102",  # undocumented-public-method
    "D103",  # undocumented-public-function
    "D104",  # undocumented-public-package
    "D105",  # undocumented-magic-method
    "D106",  # undocumented-public-nested-class
    "D107",  # undocumented-public-init
    "D203",  # one-blank-line-before-class
    "D213",  # multi-line-summary-second-line
    "EM101",  # raw-string-in-exception
    "EM102",  # f-string-in-exception
    "FA102",  # future-required-type-annotation
    "FIX002",  # line-contains-todo
    "N815",  # mixed-case-variable-in-class-scope
    "PLR0911",  # too-many-return-statements
    "PLR0913",  # too-many-arguments
    "RUF001",  # ambiguous-unicode-character-string
    "TD002",  # missing-todo-author
    "TD003",  # missing-todo-link
    "TID252",  # relative-imports
    "TRY003",  # raise-vanilla-args
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
  "S101",  # assert
]

[tool.mypy]
python_version = "3.12"
files = ["nether"]
check_untyped_defs = true
disallow_untyped_defs = true  # for strict mypy: (this is the tricky one :-))
disallow_untyped_calls = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pdm.scripts]
lint = "ruff check --fix"
tc = "mypy ."
pre = "pre-commit run --all-files"
